Link manifest file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Αίτηση Κίνησης</title>
   <link rel="shortcut icon" href="favicon-32.png?v=1.0.0">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
