Support offline mode

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Αίτηση Κίνησης</title>
-  <link rel="shortcut icon" href="favicon-32.png?v=1.0.0">
+  <link rel="shortcut icon" href="icons/icon-32x32.png?v=1.0.0">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
   <header>
@@ -90,6 +90,6 @@
     </p>
   </footer>
 
-  <script src="js/main.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
