Build the final url on form submission

--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
       </ul>
 
       <div class="text-center">
-        <a href="" id="send" class="btn" style="margin-bottom: 0.5rem;">
-          Αποστολή SMS
-        </a>
+        <input type="submit" class="btn" value="Αποστολή SMS" style="margin-bottom: 0.5rem;" />
       </div>
     </form>
   </section>
