Add google font; minor spacing fixes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="icons/icon-32x32.png?v=1.0.0">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap">
 </head>
 <body>
   <header>
@@ -51,8 +52,8 @@
         <li>
           <input type="radio" name="reason" value="4" id="reason-4">
           <label for="reason-4">
-            <span class="label-title">Β4 - Παροχή βοήθειας</span>
-            Κίνηση για παροχή βοήθειας σε ανθρώπους που βρίσκονται σε ανάγκη.
+            <span class="label-title">Β4 - Παροχή βοήθειας - Συνοδεία ανηλίκων</span>
+            Κίνηση για παροχή βοήθειας σε ανθρώπους που βρίσκονται σε ανάγκη ή συνοδεία ανηλίκων μαθητών από/προς το σχολείο.
           </label>
         </li>
 
@@ -74,7 +75,7 @@
       </ul>
 
       <div class="text-center">
-        <input type="submit" class="btn" value="Αποστολή SMS" style="margin-bottom: 0.5rem;" />
+        <input type="submit" class="btn" value="Αποστολή SMS" />
       </div>
     </form>
   </section>
