--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Εύκολο SMS για άδεια κυκλοφορίας κατά τη διάρκεια απαγόρευσης κυκλοφορίας στην Ελλάδα">
   <title>Αίτηση Κίνησης</title>
   <link rel="shortcut icon" href="icons/icon-32x32.png?v=1.0.0">
   <link rel="manifest" href="manifest.webmanifest">
