Add source code attribution

--- a/index.html
+++ b/index.html
@@ -76,17 +76,22 @@
       </ul>
 
       <div class="text-center">
-        <input type="submit" class="btn" value="Αποστολή SMS" />
+        <input type="submit" class="btn" value="Αποστολή SMS" style="margin-bottom: 0.5rem;" />
+
+        <p class="text-muted text-center">
+          <small><strong>ΠΡΟΣΟΧΗ:</strong> Όλα τα στοιχεία αποθηκεύονται αποκλειτικά και μόνο στη συσκευή σας.</small>
+        </p>
       </div>
     </form>
   </section>
 
   <footer>
     <p class="text-muted text-center">
-      <small>ΠΡΟΣΟΧΗ: Όλα τα στοιχεία αποθηκεύονται αποκλειτικά και μόνο στη συσκευή σας.</small>
-    </p>
-    <p class="text-muted text-center">
       <small>Icons made by <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs" target="_blank" rel="noopener noreferrer">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></small>
+    </p>
+
+    <p class="text-muted text-center">
+      <small>Source code is available on <a href="https://github.com/georapbox/lockdown-movement-application" target="_blank" rel="noopener noreferrer">Github</a> under the MIT license.</small>
     </p>
   </footer>
 
