Add share button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <body>
   <header>
     <h1>Αίτηση Κίνησης</h1>
+
+    <button id="share-btn">
+      <img src="img/icons/share.svg" width="26" height="26" alt="Share">
+    </button>
   </header>
 
   <section>
