--- a/index.html
+++ b/index.html
@@ -21,68 +21,91 @@
 
   <section>
     <form name="application-form" action="/" method="POST">
-      <div class="form-group">
-        <input class="form-control" type="text" name="fullName" placeholder="Ονοματεπώνυμο" />
-      </div>
+      <div style="margin-bottom: 0.75rem;">
+        <div class="form-group">
+          <input class="form-control" type="text" name="fullName" placeholder="Ονοματεπώνυμο" />
+        </div>
 
-      <div class="form-group">
-        <input class="form-control" type="text" name="address" placeholder="Διεύθυνση κατοικίας" />
+        <div class="form-group">
+          <input class="form-control" type="text" name="address" placeholder="Διεύθυνση κατοικίας" />
+        </div>
       </div>
 
       <ul class="list-group">
         <li>
           <input type="radio" name="reason" value="1" id="reason-1">
           <label for="reason-1">
-            <span class="label-title">Β1 - Φαρμακείο - γιατρός</span>
-            Μετάβαση σε φαρμακείο ή επίσκεψη στον γιατρό, εφόσον αυτό συνιστάται μετά από σχετική επικοινωνία.
+            <img src="img/icons/pharmacy.svg" alt="">
+            <span>
+              <span class="label-title">Β1 - Φαρμακείο - γιατρός</span>
+              Μετάβαση σε φαρμακείο ή επίσκεψη στον γιατρό, εφόσον αυτό συνιστάται μετά από σχετική επικοινωνία.
+            </span>
           </label>
         </li>
 
         <li>
           <input type="radio" name="reason" value="2" id="reason-2">
           <label for="reason-2">
-            <span class="label-title">Β2 - Προμήθεια αγαθών πρώτης ανάγκης</span>
-            Μετάβαση σε εν λειτουργία κατάστημα προμηθειών αγαθών πρώτης ανάγκης, όπου δεν είναι δυνατή η αποστολή τους.
+            <img src="img/icons/cart.svg" alt="">
+            <span>
+              <span class="label-title">Β2 - Προμήθεια αγαθών πρώτης ανάγκης</span>
+              Μετάβαση σε εν λειτουργία κατάστημα προμηθειών αγαθών πρώτης ανάγκης, όπου δεν είναι δυνατή η αποστολή τους.
+            </span>
           </label>
         </li>
 
         <li>
           <input type="radio" name="reason" value="3" id="reason-3">
           <label for="reason-3">
-            <span class="label-title">Β3 - Τράπεζα</span>
-            Μετάβαση στην τράπεζα, στο μέτρο που δεν είναι δυνατή η ηλεκτρονική συναλλαγή.
+            <img src="img/icons/bank.svg" alt="">
+            <span>
+              <span class="label-title">Β3 - Τράπεζα</span>
+              Μετάβαση στην τράπεζα, στο μέτρο που δεν είναι δυνατή η ηλεκτρονική συναλλαγή.
+            </span>
           </label>
         </li>
 
         <li>
           <input type="radio" name="reason" value="4" id="reason-4">
           <label for="reason-4">
-            <span class="label-title">Β4 - Παροχή βοήθειας - Συνοδεία ανηλίκων</span>
-            Κίνηση για παροχή βοήθειας σε ανθρώπους που βρίσκονται σε ανάγκη ή συνοδεία ανηλίκων μαθητών από/προς το σχολείο.
+            <img src="img/icons/support.svg" alt="">
+            <span>
+              <span class="label-title">Β4 - Παροχή βοήθειας - Συνοδεία ανηλίκων</span>
+              Κίνηση για παροχή βοήθειας σε ανθρώπους που βρίσκονται σε ανάγκη ή συνοδεία ανηλίκων μαθητών από/προς το σχολείο.
+            </span>
           </label>
         </li>
 
         <li>
           <input type="radio" name="reason" value="5" id="reason-5">
           <label for="reason-5">
-            <span class="label-title">Β5 - Μετάβαση σε τελετή</span>
-            Μετάβαση σε τελετή (π.χ. κηδεία, γάμος, βάφτιση) υπό τους όρους που προβλέπει ο νόμος ή μετάβαση διαζευγμένων γονέων ή γονέων που τελούν σε διάσταση που είναι αναγκαία για τη διασφάλιση της επικοινωνίας γονέων και τέκνων, σύμφωνα με τις κείμενες διατάξεις.
+            <img src="img/icons/cake.svg" alt="">
+            <span>
+              <span class="label-title">Β5 - Μετάβαση σε τελετή</span>
+              Μετάβαση σε τελετή (π.χ. κηδεία, γάμος, βάφτιση) υπό τους όρους που προβλέπει ο νόμος ή μετάβαση διαζευγμένων γονέων ή γονέων που τελούν σε διάσταση που είναι αναγκαία για τη διασφάλιση της επικοινωνίας γονέων και τέκνων, σύμφωνα με τις κείμενες διατάξεις.
+            </span>
           </label>
         </li>
 
         <li>
           <input type="radio" name="reason" value="6" id="reason-6">
           <label for="reason-6">
-            <span class="label-title">Β6 - Σωματική άσκηση - κατοικίδιο ζώο</span>
-            Σύντομη μετακίνηση, κοντά στην κατοικία μου, για ατομική σωματική άσκηση (εξαιρείται οποιαδήποτε συλλογική αθλητική δραστηριότητα) ή για τις ανάγκες κατοικιδίου ζώου.
+            <img src="img/icons/run.svg" alt="">
+            <span>
+              <span class="label-title">Β6 - Σωματική άσκηση - κατοικίδιο ζώο</span>
+              Σύντομη μετακίνηση, κοντά στην κατοικία μου, για ατομική σωματική άσκηση (εξαιρείται οποιαδήποτε συλλογική αθλητική δραστηριότητα) ή για τις ανάγκες κατοικιδίου ζώου.
+            </span>
           </label>
         </li>
       </ul>
 
       <div class="text-center">
-        <input type="submit" class="btn" value="Αποστολή SMS" style="margin-bottom: 0.5rem;" />
+        <button type="submit" class="send-btn" style="margin-bottom: 0.5rem;">
+          <span>Αποστολή SMS</span>
+          <img src="img/icons/send.svg" width="20" height="20" alt="Send">
+        </button>
 
-        <p class="text-muted text-center">
+        <p class="text-center">
           <small><strong>ΠΡΟΣΟΧΗ:</strong> Όλα τα στοιχεία αποθηκεύονται αποκλειτικά και μόνο στη συσκευή σας.</small>
         </p>
       </div>
