Update launch icons

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="description" content="Εύκολο SMS για άδεια κυκλοφορίας κατά τη διάρκεια απαγόρευσης κυκλοφορίας στην Ελλάδα">
   <title>Αίτηση Κίνησης</title>
-  <link rel="shortcut icon" href="icons/icon-32x32.png?v=1.0.0">
+  <link rel="shortcut icon" href="icons/icon-36.png?v=1.0.0">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap">
@@ -115,7 +115,7 @@
 
   <footer>
     <p class="text-muted text-center">
-      <small>Icons made by <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs" target="_blank" rel="noopener noreferrer">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></small>
+      <small>Launcher icon by <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market" target="_blank" rel="noopener noreferrer">Vectors Market</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></small>
     </p>
 
     <p class="text-muted text-center">
