--- a/index.html
+++ b/index.html
@@ -6,21 +6,30 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="description" content="Εύκολο SMS για άδεια κυκλοφορίας κατά τη διάρκεια απαγόρευσης κυκλοφορίας στην Ελλάδα">
   <title>Αίτηση Κίνησης</title>
-  <link rel="shortcut icon" href="icons/icon-36.png?v=1.0.0">
+  <link rel="shortcut icon" href="icons/icon-192.png?v=1.0.0">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap">
 </head>
 <body>
   <header>
-    <h1>Αίτηση Κίνησης</h1>
-
     <button id="share-btn">
       <svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 0 24 24" width="26"><path d="M0 0h24v24H0V0z" fill="none"/><path class="fill" d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92c0-1.61-1.31-2.92-2.92-2.92zM18 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM6 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm12 7.02c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"/></svg>
     </button>
+
+    <h1>Αίτηση Κίνησης</h1>
+
+    <label for="theme-slider" class="theme-switch">
+      <input type="checkbox" id="theme-slider">
+      <span class="slider round"></span>
+    </label>
   </header>
 
   <section>
+    <div class="alert alert-danger alert-js-disabled">
+      Please enable scripts for this app to properly work.
+    </div>
+
     <form name="application-form" action="/" method="POST">
       <div class="form-group">
         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none"/><path class="fill" d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
@@ -101,7 +110,7 @@
       </ul>
 
       <div class="text-center">
-        <button type="submit" class="send-btn">
+        <button type="submit" class="send-btn" disabled>
           <span>Αποστολή SMS</span>
           <img src="img/icons/send.svg" width="20" height="20" alt="Send">
         </button>
