Update service worker

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="description" content="Εύκολο SMS για άδεια κυκλοφορίας κατά τη διάρκεια απαγόρευσης κυκλοφορίας στην Ελλάδα">
   <title>Αίτηση Κίνησης</title>
-  <link rel="shortcut icon" href="icons/icon-192.png?v=1.0.0">
+  <link rel="shortcut icon" href="icons/icon-192.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap">
