Change locale to el

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
   </header>
 
   <div class="alert alert-danger alert-js-disabled">
-    Please enable scripts for this app to properly work.
+    Για τη σωστή λειτουργία της εφαρμογής είναι απαραίτητη η ενεργοποίηση της JavaScript.
   </div>
 
   <form name="application-form" action="/" method="POST">
