--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#ffffff">
+  <meta name="color-scheme" content="dark light">
   <meta name="description" content="Εύκολο SMS για άδεια κυκλοφορίας κατά τη διάρκεια απαγόρευσης κυκλοφορίας στην Ελλάδα">
   <title>Αίτηση Κίνησης</title>
   <link rel="shortcut icon" href="icons/icon-192.png">
