--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     Για τη σωστή λειτουργία της εφαρμογής είναι απαραίτητη η ενεργοποίηση της JavaScript.
   </div>
 
+  <div class="alert alert-info d-none" id="speech-alert">
+    Η εφαρμογή υποστηρίζει πειραματικά αναγνώριση φωνής. Εφόσον δώσετε πρόσβαση στην εφαρμογή να χρησιμοποιήσει το μικρόφωνο,
+    μπορείτε να δίνετε απλές φωνητικές εντολές όπως <strong>"Αποστολή 1"</strong> για να στείλετε <strong>Β1</strong>, κ.ο.κ.
+
+    <button type="button" class="btn-icon btn-close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
   <form name="application-form" action="/" method="POST">
     <div class="form-group">
       <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none"/><path class="fill" d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
