--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     Για τη σωστή λειτουργία της εφαρμογής είναι απαραίτητη η ενεργοποίηση της JavaScript.
   </div>
 
+  <div class="text-center d-none">
+    <button type="button" id="speech-btn" class="pulsating-circle">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="30px" height="30px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 14c1.66 0 2.99-1.34 2.99-3L15 5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3zm5.3-3c0 3-2.54 5.1-5.3 5.1S6.7 14 6.7 11H5c0 3.41 2.72 6.23 6 6.72V21h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"/></svg>
+    </button>
+  </div>
+
   <div class="alert alert-info d-none" id="speech-alert">
     Η εφαρμογή υποστηρίζει πειραματικά αναγνώριση φωνής. Εφόσον δώσετε πρόσβαση στην εφαρμογή να χρησιμοποιήσει το μικρόφωνο,
     μπορείτε να δίνετε απλές φωνητικές εντολές όπως <strong>"Αποστολή 1"</strong> για να στείλετε <strong>Β1</strong>, κ.ο.κ.
@@ -139,8 +145,6 @@
       </button>
     </div>
   </form>
-
-  <div id="debug"></div>
 
   <script src="scripts/main.js"></script>
 </body>
